# backend/phase_two/task_four/internal/infrastructure/persistence/gorm_user_repository.go
@@ -3,7 +3,6 @@ package persistence
 import (
 	"backend/backend/phase_two/task_four/internal/domain/model"
 	"backend/backend/phase_two/task_four/internal/domain/repository"
-	"context"
 
 	"gorm.io/gorm"
 )
@@ -22,9 +21,17 @@ func NewGormUserRepository(db *gorm.DB) repository.UserRepository {
 }
 
 // FindByEmail 实现 User 特有方法
-func (r *GormUserRepository) FindByEmail(ctx context.Context, email string) (*model.User, error) {
+func (r *GormUserRepository) FindByEmail(email string) (*model.User, error) {
 	var user model.User
-	if err := r.db.WithContext(ctx).Where("email = ?", email).First(&user).Error; err != nil {
+	if err := r.db.Where("email = ?", email).First(&user).Error; err != nil {
+		return nil, err
+	}
+	return &user, nil
+}
+
+func (r *GormUserRepository) FindByUsername(username string) (*model.User, error) {
+	var user model.User
+	if err := r.db.Where("username = ?", username).First(&user).Error; err != nil {
 		return nil, err
 	}
 	return &user, nil
